# DevMAN

./: README.md
API_services/BITLY_cli/: README.md  main.py
API_services/DOWNLOAD_PHOTOS_FROM_NASA_SpaceX/: README.md  fetch_nasa_apod_images.py  fetch_nasa_epic_images.py  fetch_spacex_images.py  requirements.txt  tg_bot.py  tools.py
API_services/PROGRAMMING_VACANCIES_COMPARE/: .gitignore  README.md
Chat_Bots/devman_notify_bot/: README.md  devman.py  main.py  notify_bot.py  requirements.txt  telegram.py
Git_and_GitHub/vshaurme/: .gitignore  LICENSE  README.md
Website_Layout/WINE/: main.py  pyproject.toml  template.html
Website_Layout/WINE/.upm/: store.json
